--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,11 @@
  /* xx */
  
  
- 
+ *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
  
  :root {
             --marrom: #211800;
@@ -126,6 +130,7 @@
             background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5));
             width: 100%;
             height: 60vh;
+            margin: 0;
             display: flex;
             flex-direction: column;
             justify-content: center;
