--- a/CSS/style.css
+++ b/CSS/style.css
@@ -68,6 +68,24 @@
             transform: scale(1.10);
         }
 
+        .login{
+            background-color: var(--dourado);
+            color: white;
+            width: 5rem;
+            height: 2rem;
+            border-radius: 2rem;
+            border: none;
+            cursor: pointer;
+            transition: var(--transicao);
+        }
+        .login:hover{
+            background-color: var(--cinza-claro);
+            color: var(--marrom);
+            transition: var(--transicao);
+            transform: scale(1.10);
+            cursor: pointer;
+        }
+
         /* Botão Hambúrguer */
         /* --- ESTILO DO MENU HAMBÚRGUER ANIMADO --- */
         .hamburger {
