--- a/CSS/style.css
+++ b/CSS/style.css
@@ -136,6 +136,7 @@
             background: var(--branco);
         }
 
+        .home{visibility: hidden;}
 
         /* nav a {
             color: white;
@@ -298,4 +299,6 @@
             .nav-menu.active { right: 0; }
             .nav-menu li { margin: 20px 0; }
             .nav-menu a { font-size: 1.5rem; }
+
+            .home{visibility:visible;}
         }
