--- a/CSS/style.css
+++ b/CSS/style.css
@@ -266,7 +266,6 @@
             text-align: center;
             font-size: 30px;
             box-shadow: 0px 0px 10px 1px #27272778;
-            z-index: 100;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -297,4 +296,9 @@
             .nav-menu.active { right: 0; }
             .nav-menu li { margin: 20px 0; }
             .nav-menu a { font-size: 1.5rem; }
+
+            footer{
+                text-align: left;
+                height: 130px;
+            }
         }
