--- a/CSS/style.css
+++ b/CSS/style.css
@@ -339,7 +339,7 @@
 
 
  /* Responsividade - MOBILE */
- @media (max-width: 950px) {
+ @media (max-width: 768px) {
      .hamburger {
          display: block;
          position: absolute;
@@ -375,7 +375,7 @@
      .hero {
          background-image: url('../img/imgaerea2-mob.jpeg');
          background-position: center;
-         background-size: cover;
+         background-size: 80%;
          background-attachment: fixed;
          width: 100%;
          height: 70vh;
