--- a/CSS/style.css
+++ b/CSS/style.css
@@ -375,7 +375,7 @@
      .hero {
          background-image: url('../img/imgaerea2-mob.jpeg');
          background-position: center;
-         background-size: contain;
+         background-size: cover;
          background-attachment: fixed;
          width: 100%;
          height: 70vh;
