--- a/CSS/style.css
+++ b/CSS/style.css
@@ -375,10 +375,9 @@
      .hero {
          background-image: url('../img/imgaerea2-mob.jpeg');
          background-position: center;
-         background-size: contain;
+         background-size: cover;
          background-repeat: no-repeat;
          background-attachment: scroll;
-         min-height: 70vh;
          width: 100%;
          height: 70vh;
      }
@@ -387,7 +386,7 @@
          font-size: 2.5rem;
          margin-bottom: 15px;
      }.hero p{
-        font-size: 1.1rem
+        font-size: 1.1rem;
      }
 
 
